--- a/_posts/2023-10-05-03-Python-데이터타입.md
+++ b/_posts/2023-10-05-03-Python-데이터타입.md
@@ -1,4 +1,10 @@
-## 데이터 타입 변환 (형변환) 함수
+---
+layout: single
+title: "01-Pyhon-변수"
+date: 2023-10-05-03
+---
+
+# 데이터 타입 변환 (형변환) 함수
 - ##### 값의 데이터타입을 확인하는 함수
     
     - type(값)
