Update and rename 2023-10-05-포맷문자.md to 2023-10-05-03-Pyhon-포맷문자.md

--- a/_posts/2023-10-05-03-Pyhon-포맷문자.md
+++ b/_posts/2023-10-05-03-Pyhon-포맷문자.md
@@ -1,4 +1,10 @@
-### Format string (형식문자열) 생성
+---
+layout: single
+title: "03-Pyhon-FormatString"
+date: 2023-10-05-03
+---
+
+# Format string (형식문자열) 생성
 - 문자열에 문장 형식/구성/Layout을  미리 만들어 놓고 값은 나중에 대입하는 방식으로 문자열을 만드는 것
  - format() 함수 이용
     - 문자열을 만들 때 값을 나중에 넣을 위치 { } 로 표시하고 format() 메소드에서 { }에 들어갈 값을 순서대로 넣는다.
