Update and rename 2023-10-05-03-Python-데이터타입.md to 2023-10-05-03-Python-데이터타입 변환.md

--- a/_posts/2023-10-05-03-Python-데이터타입 변환.md
+++ b/_posts/2023-10-05-03-Python-데이터타입 변환.md
@@ -1,7 +1,7 @@
 ---
 layout: single
-title: "01-Pyhon-변수"
-date: 2023-10-05-03
+title: "04-Pyhon-데이터타입변환"
+date: 2023-10-05-04
 ---
 
 # 데이터 타입 변환 (형변환) 함수
