--- a/_posts/2023-10-08-Fist.md
+++ b/_posts/2023-10-08-Fist.md
@@ -5,4 +5,12 @@ title: '첫 포스팅입니다.'
 
 # 오늘 처음 블로그를 만들었습니다.
 
-데이터애널리스트를 공부하고 있는 히나의 블로그입니다. 앞으로 열심히 해보겠습니다.
+데이터애널리스트를 공부하고 있는 히나의 블로그입니다. 
+
+앞으로 열심히 해보겠습니다.
+
+
+
+
+
+![hinamugidakko-1](D:\Hinya - Github\images\2023-10-08-Fist\hinamugidakko-1.png)
