이미지추가

--- a/_posts/2023-10-08-Fist.md
+++ b/_posts/2023-10-08-Fist.md
@@ -13,4 +13,7 @@ title: '첫 포스팅입니다.'
 
 
 
-![hinamugidakko-1](D:\Hinya - Github\images\2023-10-08-Fist\hinamugidakko-1.png)
+![hinamugidakko-1](D:\Hinya - Github\images\2023-10-08-Fist\hinamugidakko-1-1696742330099-7.png)
+
+
+
