이미지 변경

--- a/_posts/2023-10-08-Fist.md
+++ b/_posts/2023-10-08-Fist.md
@@ -12,9 +12,5 @@ typora-root-url: ../
 
 
 
-
-
-![hinamugidakko-1](\images\2023-10-08-Fist\hinamugidakko-1-1696742330099-7.png)
-
-
+![hinamugidakko-1](/images/2023-10-08-Fist/hinamugidakko-1-1696742548709-9.png)
 
