--- a/_posts/2023-10-10-02.인덱싱_슬라이싱.md
+++ b/_posts/2023-10-10-02.인덱싱_슬라이싱.md
@@ -7,12 +7,8 @@
 
 - ##### 모든 문자는 양수/음수 index 두개를 가진다.
   
-    - 양수 index
-        - 문자열 앞에서 부터 붙여주는 index
-        - 0부터 1씩 증가하는 값을 붙여준다.
-    - 음수 index
-        - 문자열 맨 뒤에서 부터 붙여주는 index
-        - -1 에서 1씩 감소하는 값을 붙여준다.
+    - 양수 index : 0부터 1씩 증가하는 값을 붙여준다. (문자열 앞에서부터 조회)
+    - 음수 index : -1 에서 1씩 감소하는 값을 붙여준다. (문자열 뒤에서부터 조회)
 
 #### Indexing
 - 문자열\[index\]
