--- a/_posts/01.Python/1. 변수와 데이터타입/2023-10-10-03.포맷문자.md
+++ b/_posts/01.Python/1. 변수와 데이터타입/2023-10-10-03.포맷문자.md
@@ -1,3 +1,9 @@
+---
+layout: single
+title: '포맷문자'
+typora-root-url: ../
+---
+
 ### Format string (형식문자열) 생성
 - 문자열에 문장 형식/구성/Layout을  미리 만들어 놓고 값은 나중에 대입하는 방식으로 문자열을 만드는 것
  - format() 함수 이용
