Update and rename 04_제어문_컴프리헨션.md to 2023-10-10-01.제어문_컴프리헨션.md

--- a/_posts/01.Python/03.제어문컴프리헨션/2023-10-10-01.제어문_컴프리헨션.md
+++ b/_posts/01.Python/03.제어문컴프리헨션/2023-10-10-01.제어문_컴프리헨션.md
@@ -1,3 +1,9 @@
+---
+layout: single
+title: '제어문'
+typora-root-url: ../
+---
+
 # 제어문(Control flow statement)
 기본적으로 프로그램은 순차구조를 가진다. 즉 작성한 순서대로 실행이 된다.  
 이런 실행흐름을 다른 순서로 제어하기 위한 구문을 만드는 문법이 제어문이다.  
