--- a/_posts/01.Python/02.자료구조/03_자료구조.ipynb
+++ b/_posts/01.Python/02.자료구조/03_자료구조.ipynb
@@ -12,8 +12,6 @@
     "# 자료구조란\n",
     "\n",
     "- 여러 개의 값들을 모아서 관리하는 데이터 타입.\n",
-    "    - 한 개의 변수는 한 개의 값 밖에는 가지지 못한다. 그러나 하나의 변수로 여러 개의 값 묶어서 저장해 관리해야 할 경우가 있다. \n",
-    "- 파이썬은 데이터를 모으는 방식에 따라 다음과 같이 4개의 타입을 제공한다.\n",
     "    - List : 순서가 있으며 중복된 값들을 모으는 것을 허용하고 구성하는 값들(원소)을 변경할 수 있다.\n",
     "    - Tuple : 순서가 있으며 중복된 값들을 모으는 것을 허용하는데 구성하는 값들을 변경할 수 없다.\n",
     "    - Dictionary : key-value 형태로 값들을 저장해 관리한다.\n",
@@ -284,7 +282,7 @@
     }
    ],
    "source": [
-    "# 0 ~뒤에서 2번째 index\n",
+    "# 0 ~ 뒤에서 2번째 index\n",
     "print( l1[0], l1[-2] ) "
    ]
   },
@@ -3609,6 +3607,7 @@
    "execution_count": 274,
    "id": "591e9efa",
    "metadata": {
+    "scrolled": true,
     "slideshow": {
      "slide_type": "skip"
     }
