--- a/_posts/01.Python/02.자료구조/2023-10-10-05.자료구조 변환 함수.md
+++ b/_posts/01.Python/02.자료구조/2023-10-10-05.자료구조 변환 함수.md
@@ -8,14 +8,15 @@ typora-root-url: ../
 # 자료구조 변환 함수
 
 - list(자료구조)
-    - 대상 자료구조/Iterable을 List로 변환한다.
+    - 대상 자료구조을 List로 변환한다.
 - tuple(자료구조)
-    - 대상 자료구조/Iterable을 Tuple로 변환
+    - 대상 자료구조을 Tuple로 변환
 - set(자료구조)
-    - 대상 자료구조/Iterable을 Set으로 변환
+    - 대상 자료구조을 Set으로 변환
     - 다른 자료구조의 원소 중 중복을 빼고 조회할 때 set()를 이용해 Set으로 변환한다.
 - Dictionary로 변환하는 함수는 없다.
-- 변경할 대상이 Dictionary 일 경우에는 key값들만 모아서 변환한다.
+    - 변경할 대상이 Dictionary 일 경우에는 key값들만 모아서 변환한다.
+
 
 
 
