--- a/_posts/01.Python/02.자료구조/2023-10-10-06.실습예제.md
+++ b/_posts/01.Python/02.자료구조/2023-10-10-06.실습예제.md
@@ -75,7 +75,8 @@ print(jumsu)
 # list를 set 으로 바꾸면서 set의 중복된 값 제거
 set(jumsu) 
 print(jumsu)
-# list(set(jumsu)) # set()으로 중복을 제거 하고 그 결과를 리스트로 변환
+# list(set(jumsu))
+# 	set()으로 중복을 제거 하고 그 결과를 리스트로 변환
 ```
 
     [100, 90, 100, 80, 70, 100, 80, 90, 20, 85]
@@ -113,9 +114,14 @@ print(fruits)
 
 ```python
 # 문제 10 ~ 15
-#(10)본인의 이름, 나이, email주소, 취미, 결혼유무를 사전(딕셔너리)으로 생성. 
+#(10)본인의 이름, 나이, email주소, 취미, 결혼유무를 
+#  				사전(딕셔너리)으로 생성. 
 # 취미는 2개 이상의 값을 넣는다..
-person = dict( 이름='홍길동', 나이=25, email주소='a@a.com', 취미=['음악','스포츠'], 결혼여부=False )
+person = dict( 이름='홍길동', 
+              나이=25, 
+              email주소='a@a.com', 
+              취미=['음악','스포츠'], 
+              결혼여부=False )
 print(person)
 ```
 
