--- a/_posts/01.Python/02.자료구조/2023-10-10-01.List(리스트).md
+++ b/_posts/01.Python/02.자료구조/2023-10-10-01.List(리스트).md
@@ -77,13 +77,15 @@ print(l1)
 
     [1, 2, 6, 4, 5]
 
-
 ## Slicing
+
 - 범위로 조회하거나 그 범위의 값들을 변경한다.
 - 기본구문: **리스트\[ 시작 index : 종료 index : 간격\]**
     - 시작 index ~ (종료 index – 1)
     - 간격을 지정하면 간격만큼 index를 증/감한다. (생략 시 1이 기본 간격)
+
 ### slicing을 이용한 값 변경
+
 - slicing 을 이용할 경우 slicing된 원소 개수와 동일한 개수의 값들을 대입한다.
     - `리스트[1:5] = 10,20,30,40` : index 1, 2, 3, 4의 값을 각각 10, 20, 30, 40 으로 변경
 
@@ -373,7 +375,8 @@ print( l3 )
 
 
 ```python
-# 두개의 리스트를 합친 후 값을 찾을 때 순서대로 박스 안에 들어가는 개념으로 찾아야함
+# 두개의 리스트를 합친 후 값을 찾을 때 
+# 			순서대로 박스 안에 들어가는 개념으로 찾아야함
 print( l3 [0] [1] ) 
 ```
 
