--- a/_posts/03_도형그리기 이미지 이동.md
+++ b/_posts/03_도형그리기 이미지 이동.md
@@ -1,3 +1,9 @@
+---
+layout: single
+title: '첫 포스팅입니다.'
+typora-root-url: ../
+---
+
 ## 도형그리기
 - 각 함수들은 원본 이미지에 도형을 그린다.
 - **cv2.line(img, pt1, pt2, color, tickness=None, lineType=None, shift):img**
