--- a/_posts/01.Python/03.제어문컴프리헨션/2023-10-03-05.Zip.md
+++ b/_posts/01.Python/03.제어문컴프리헨션/2023-10-03-05.Zip.md
@@ -2,10 +2,12 @@
 layout: single
 title: 'Zip'
 typora-root-url: ../
+categories: Python.03
+tag: Python
 ---
 
+# Zip()
 
-## zip()
 - 여러 개의 Iterable 객체를 받아 반복시 같은 index의 값끼리 튜플로 묶어 반환한다.
 - 구문
     - `zip(Iterable1, Iterable2, Iterable3 [, .......])`
