--- a/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-11-00.Pandas 정렬과 집계.md
+++ b/_posts/03.Pandas/03.Pandas_정렬과 집계/2023-10-11-00.Pandas 정렬과 집계.md
@@ -2,6 +2,7 @@
 layout: single
 title: '변수와 연산자'
 typora-root-url: ../
+categories: Python
 ---
 
 # 정렬
@@ -45,7 +46,7 @@ df.sort_index()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -391,7 +392,7 @@ df.sort_index(ascending=False)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -738,7 +739,7 @@ df.sort_index(axis=1)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1090,7 +1091,7 @@ df2.loc['A':'C'] # end는 포함안됨.
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1437,7 +1438,7 @@ df.sort_index().loc['A':'B']
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -1806,7 +1807,7 @@ df.sort_values(by="director_name")
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2151,7 +2152,7 @@ df.sort_values(by="director_name", ascending=False)  #내림차순
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2496,7 +2497,7 @@ df.sort_values(['duration', 'imdb_score'])[['duration', 'imdb_score']].head(20)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2640,7 +2641,7 @@ df.sort_values(['duration', 'imdb_score'], ascending=[True, False]) \
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -2785,7 +2786,7 @@ result
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3200,7 +3201,7 @@ a.set_index('movie_title').sort_index().loc['A':'D']
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3598,7 +3599,7 @@ flight.info()
      13  CANCELLED  58492 non-null  int64  
     dtypes: float64(3), int64(8), object(3)
     memory usage: 6.2+ MB
-    
+
 
 
 ```python
@@ -3643,7 +3644,7 @@ flight.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -3814,7 +3815,7 @@ flight.mode()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4023,7 +4024,7 @@ flight[['MONTH', 'DAY', 'WEEKDAY']].mode()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4067,7 +4068,7 @@ flight.select_dtypes(include='object').mode()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4182,7 +4183,7 @@ flight.agg(["min", "max"]).T
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4289,7 +4290,7 @@ flight[['DEP_DELAY', 'ARR_DELAY']].agg(['mean', 'std'])
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4337,7 +4338,7 @@ flight.select_dtypes(include='number').agg(['min', 'max', 'mean']).T
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4448,7 +4449,7 @@ flight.agg(d)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4539,7 +4540,7 @@ gb.groups
 ```
 
     <class 'pandas.core.groupby.generic.DataFrameGroupBy'>
-    
+
 
 
 
@@ -4593,7 +4594,7 @@ flight.groupby("AIRLINE").mean(numeric_only=True)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4851,7 +4852,7 @@ flight.groupby("AIRLINE")[['DEP_DELAY', 'ARR_DELAY']].mean()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -4964,7 +4965,7 @@ flight.groupby("ORG_AIR")['DEP_DELAY'].agg(["min", "max", min_max_diff])
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -5068,7 +5069,7 @@ flight.groupby('ORG_AIR').agg({"DEP_DELAY":"mean", "ARR_DELAY":"min"})
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -5366,7 +5367,7 @@ flight.groupby('AIRLINE').agg("count") # DataFrameGroupby.agg()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -5694,7 +5695,7 @@ flight.select_dtypes(include="int64")
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -5921,7 +5922,7 @@ flight.groupby('AIRLINE')[['DEP_DELAY', 'ARR_DELAY']].agg(iqr)
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6038,7 +6039,7 @@ dm
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6251,7 +6252,7 @@ dm.info()
      9   z        53940 non-null  float64
     dtypes: float64(6), int64(1), object(3)
     memory usage: 4.1+ MB
-    
+
 
 
 ```python
@@ -6289,7 +6290,7 @@ dm.head()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6400,7 +6401,7 @@ dm.tail()
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6534,7 +6535,7 @@ dm[['carat', 'price', 'depth']].agg(['sum','mean','max','min'])
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6604,7 +6605,7 @@ dm['']
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6712,7 +6713,7 @@ dm.groupby('clarity')['carat'].agg(['mean','std']).sort_values('mean')
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -6796,7 +6797,7 @@ dm.groupby(['cut','color']).agg({'price':'mean','carat':'max'}) \
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7022,7 +7023,7 @@ result[(result['price'] >= 5000) & (result['carat'] >= 3)]
     .dataframe tbody tr th {
         vertical-align: top;
     }
-
+    
     .dataframe thead th {
         text-align: right;
     }
@@ -7080,5 +7081,4 @@ result[(result['price'] >= 5000) & (result['carat'] >= 3)]
   </tbody>
 </table>
 </div>
-
 
