--- a/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-05.실습예제.md
+++ b/_posts/01.Python/01. 변수와 데이터타입/2023-10-01-05.실습예제.md
@@ -2,6 +2,8 @@
 layout: single
 title: '실습예제'
 typora-root-url: ../
+categories: Python.01
+tag: Python
 ---
 
 # 실습예제
@@ -14,7 +16,7 @@ print(jumin[  : 6 ])
 ```
 
     901211
-    
+
 
 
 ```python
@@ -23,7 +25,7 @@ print('안녕하세요' * 10)
 ```
 
     안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요안녕하세요
-    
+
 
 
 ```python
@@ -34,7 +36,7 @@ print(len(str_value))
 ```
 
     24
-    
+
 
 
 ```python
@@ -52,7 +54,7 @@ print(f'제품명 : {name}, 나이 : {price}, 제조시 : {maker}')
 ```
 
     제품명 : TV, 나이 : 300000, 제조시 : LG
-    
+
 
 
 ```python
@@ -67,7 +69,7 @@ print('수박' in fruits) # fruits 안에 '수박'이 있는지
 ```
 
     False
-    
+
 
 
 ```python
@@ -76,7 +78,7 @@ print('수박있음' if '수박' in fruits else '수박없음')
 ```
 
     수박없음
-    
+
 
 
 ```python
@@ -92,7 +94,7 @@ print(str_value.count('a'))
 ```
 
     9
-    
+
 
 
 ```python
@@ -106,4 +108,4 @@ print( a * b )
     숫자1 :2
     숫자2 :10
     20.0
-    
+
